src/objects/NovaRun__c.object
<CustomObject>
    <description>This object holds NovaCop run information on a project like total lines of code,total violations, date run etc.</description>
    <fields>
        <fullName>DateRun__c</fullName>
        <label>Date Run</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Error_Description__c</fullName>
        <description>If there is an exception occurred during any Novarun execution then this field will contain the description of that error.</description>
        <label>Error Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incident_Measure__c</fullName>
        <label>Incident Measure</label>
        <precision>8</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Latest_Run__c</fullName>
        <formula>Project__r.Last_Scan_Date__c =  DateRun__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Latest Run</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NQI__c</fullName>
        <label>NQI</label>
        <precision>8</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P1_Records__c</fullName>
        <label>P1 Violations</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P2_Records__c</fullName>
        <label>P2 Violations</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P3_Records__c</fullName>
        <label>P3 Violations</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>NovaRuns</relationshipLabel>
        <relationshipName>NovaRuns</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>It will show either Success or Failure of a particular Novarun</description>
        <label>Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Violations__c</fullName>
        <label>Total Violations</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_lines_of_code__c</fullName>
        <label>Total lines of code</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>NovaRun</label>
    <nameField>
        <label>NovaRun Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NovaRuns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>